add basic pickup form for client

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,9 +33,11 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <% include partials/nav %>
   <%- body %>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="/js/main.js"></script>
 </body>
 </html>
