--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,10 +1,16 @@
 <link rel="stylesheet" href="/css/nav.css">
 <ul class="topnav" id="myTopnav">
-  <li><a class="floatLeft" href="/">REIGNdeer</a></li>
-  <li><a class="floatLeft" href="/auth/logout">Logout</a></li>
-  <li><a class="floatLeft" href="#news">News</a></li>
-  <li><a class="floatLeft" href="#contact">Contact</a></li>
-  <li><a>Hello, <%= currentUser.name %></a></li>
+  <li><a href="/">REIGNdeer</a></li>
+  <% if (currentUser) { %>
+    <li><a href="/auth/logout">Logout</a></li>
+    <li><a href="#news">News</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a>Hello, <%= currentUser.name %></a></li>
+  <% } else { %>
+    <li><a href="/auth/login">login</a></li>
+    <li><a href="/auth/signup">signup</a></li>
+  <% } %>
+
   <li class="icon">
     <a href="javascript:void(0);" onclick="expandHamburger()">&#9776;</a>
   </li>
