--- a/views/client/index.ejs
+++ b/views/client/index.ejs
@@ -50,14 +50,11 @@
           </select>
         </div>
 
-
-
-
       </div>
 
       <div id="dropoffForms">
 
-        <div class="row">
+        <div class="row" style="margin-top: 2%">
           <h5>Drop off</h5>
         </div>
         <div class="row">
@@ -67,7 +64,7 @@
           </div>
           <div class="six columns">
             <label for="newJobDropoffPostalCode">Postal Code</label>
-            <input class="u-full-width" type="email" name="dropoffPostalCode" placeholder="eg. 123456" id="newUserEmail">
+            <input class="u-full-width" type="number" name="dropoffPostalCode" placeholder="eg. 123456" id="newUserEmail">
           </div>
         </div>
         <div class="row">
@@ -87,6 +84,26 @@
 
       </div>
 
+
+
+
+      <div class="row" style="margin-top: 2%">
+        <h5>Details</h5>
+      </div>
+      <div class="row">
+        <div class="twelve columns">
+          <label for="newJobItemType">Item size and type</label>
+          <select class="u-full-width" name="itemType" id="newJobItemType">
+            <option value="1">Document (up to 297 x 420 x 10 mm, 200g)</option>
+            <option value="2">Small (up to 300 x 300 x 100 mm, 500g)</option>
+            <option value="3">Medium (up to 450 x 450 x 200 mm, 1.5kg)</option>
+            <option value="4">Large (up to 750 x 750 x 500 mm, 3kg)</option>
+            <option value="5">Odd Sized</option>
+          </select>
+        </div>
+      </div>
+      <label for="newJobNotes">Notes</label>
+      <textarea class="u-full-width" name="notes" placeholder="Special instructions… (if any)" id="newJobNotes"></textarea>
 
 
 
