--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,20 @@
+/*div {
+  border: 1px solid black
+}*/
+
+
 input #newJobPickupTimeDate {
   width: 100% !important
+}
+
+.validation-red {
+    color: red
+}
+
+.validation-green {
+    color: green
+}
+
+.text-align-center{
+  text-align: center;
 }
