install react and webpack

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,6 +38,7 @@
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="/reactjs/bundle.js" type="text/javascript"></script>
   <script src="/js/main.js"></script>
 </body>
 </html>
