create new react component ClientManage.jsx and configure /client/manage route db query

--- a/views/client/index.ejs
+++ b/views/client/index.ejs
@@ -3,5 +3,6 @@
 <script src="https://unpkg.com/flatpickr"></script>
 
 <% include ../partials/newJobForm %>
+<div id="app">
 
-<div id="app"></div>
+</div>
