add socket.io client able to update job details

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
   <% if (currentUser) { %>
     <li><a href="/auth/logout">Logout</a></li>
     <li><a href="#news">News</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="/client/manage">Manage</a></li>
     <li><a>Hello, <%= currentUser.name %></a></li>
   <% } else { %>
     <li><a href="/auth/login">login</a></li>
