--- a/views/partials/newJobForm.ejs
+++ b/views/partials/newJobForm.ejs
@@ -69,7 +69,7 @@
         </div>
         <div class="row">
           <div class="six columns">
-            <label for="newJobDropoffContactName">Sender Name</label>
+            <label for="newJobDropoffContactName">Receiver Name</label>
             <input class="u-full-width" type="text" name="dropoffContactName" placeholder="Who do we look for?" id="newJobDropoffContactName" >
           </div>
           <div class="six columns">
@@ -103,7 +103,7 @@
         </div>
       </div>
       <label for="newJobNotes">Notes</label>
-      <textarea class="u-full-width" name="notes" placeholder="Special instructions… (if any)" id="itemDescription"></textarea>
+      <textarea class="u-full-width" name="itemDescription" placeholder="Special instructions… (if any)" id="newJobItemDescription"></textarea>
 
       <div class="row">
         <div class="twelve columns">
