client joins socket channels of jobs created by them

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,12 +3,11 @@
   <li><a href="/">REIGNdeer</a></li>
   <% if (currentUser) { %>
     <li><a href="/auth/logout">Logout</a></li>
-    <li><a href="#news">News</a></li>
     <li><a href="/client/manage">Manage</a></li>
     <li><a>Hello, <%= currentUser.name %></a></li>
   <% } else { %>
-    <li><a href="/auth/login">login</a></li>
-    <li><a href="/auth/signup">signup</a></li>
+    <li><a href="/auth/login">Login</a></li>
+    <li><a href="/auth/signup">Signup</a></li>
   <% } %>
 
   <li class="icon">
