--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,6 +31,10 @@
 </head>
 <body>
 
+  <script>
+    var currentUser = <%- JSON.stringify(currentUser) %>
+  </script>
+
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <% include partials/nav %>
@@ -38,6 +42,7 @@
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="/socket.io/socket.io.js"></script>
   <script src="/reactjs/bundle.js" type="text/javascript"></script>
   <script src="/js/main.js"></script>
 </body>
