reorganize frontend js files

--- a/views/partials/newJobForm.ejs
+++ b/views/partials/newJobForm.ejs
@@ -118,3 +118,6 @@
     <a href="/auth/login"><button type="button">I have an account</button></a>
 
   </div>
+
+  <script src="/js/client/newJobFlatpickr.js"></script>
+  <script src="/js/client/newJobPriceLogic.js"></script>
