--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,7 +3,7 @@
   <li><a href="/">REIGNdeer</a></li>
   <% if (currentUser) { %>
     <li><a href="/auth/logout">Logout</a></li>
-    <li><a href="/client/manage">Manage</a></li>
+    <li><a href="manage">Manage</a></li>
     <li><a>Hello, <%= currentUser.name %></a></li>
   <% } else { %>
     <li><a href="/auth/login">Login</a></li>
