add model assoications for client-job courier-job relationships

--- a/views/courier/index.ejs
+++ b/views/courier/index.ejs
@@ -1,1 +1,12 @@
+<!-- /courier/index -->
+
+<script type="text/javascript">
+  var jobsAvailable = <%- JSON.stringify(jobsAvailable) %>
+  var currentUserCourier = <%- JSON.stringify(currentUser) %>
+</script>
+
 <h1>This is the courier page</h1>
+
+<div id="courierJobsListing">
+
+</div>
