client socket receives real time update when courier accepts job

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -25,5 +25,13 @@ input #newJobPickupTimeDate {
 }
 
 .text-align-right {
-  text-align: right;  
+  text-align: right;
+}
+
+.inline-block{
+  display: inline-block;
+}
+
+.zero-margins{
+  margin: 0;
 }
