--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
   <% if (currentUser) { %>
     <li><a href="/auth/logout">Logout</a></li>
     <li><a href="manage">Manage</a></li>
-    <li><a>Hello, <%= currentUser.name %></a></li>
+    <li><a>Hello, <%= currentUser.name %> (<%= currentUser.type %>)</a></li>
   <% } else { %>
     <li><a href="/auth/login">Login</a></li>
     <li><a href="/auth/signup">Signup</a></li>
