add hard coded google map to ClientManage.jsx

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <div class="row" style="margin-top: 25%">
+    <div class="row" style="margin-top: 15%">
       <h3>Login</h3>
     </div>
     <form action="/auth/login" method="POST">
@@ -24,6 +24,10 @@
       <input class="button-primary" type="submit" value="Submit">
     </form>
       <a href="/auth/signup"><button type="button">Create new account</button></a>
+      <!-- <div class="row">
+        <div id="appendmap">
 
+        </div>
+      </div> -->
   </div>
 </div>
