--- a/static/css/main.css
+++ b/static/css/main.css
@@ -35,3 +35,22 @@ input #newJobPickupTimeDate {
 .zero-margins{
   margin: 0;
 }
+
+
+
+
+/*for maps*/
+html,
+body,
+.GMap {
+  height: 30em;
+  width: 100%;
+}
+.GMap-canvas {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.UpdatedText {
+  color: red;
+}
