--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,6 +23,9 @@
   <link rel="stylesheet" href="/css/skeleton.css">
   <link rel="stylesheet" href="/css/main.css">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src='<%= process.env.GOOGLE_MAPS_API %>'>
+  </script>
+
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
