--- a/views/auth/edit.ejs
+++ b/views/auth/edit.ejs
@@ -5,17 +5,19 @@
     </div>
     <form action="/auth/edit" method="POST"class="white-box">
       <div class="row">
-        <div class="six columns">
+        <div class="twelve columns">
           <label for="editUserName">Name</label>
           <input class="u-full-width" type="text" name="name" id="editUserName" value=<%= currentUser.name %> >
         </div>
-        <div class="six columns">
+      </div>
+      <div class="row">
+        <div class="twelve columns">
           <label for="editUserEmail">Email</label>
           <input class="u-full-width" type="email" name="email" id="editUserEmail" value=<%= currentUser.email %> >
         </div>
       </div>
       <div class="row">
-        <div class="six columns">
+        <div class="twelve columns">
           <label for="editUserMobile">Mobile number</label>
           <input class="u-full-width" type="number" name="mobile" id="editUserMobile" value=<%= currentUser.mobile %> >
         </div>
