--- a/views/partials/newJobForm.ejs
+++ b/views/partials/newJobForm.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row">
-      <h3 class="top-margin white-font">New pick up request</h3>
+      <h3 class="top-margin white-font">New Pickup Request</h3>
     </div>
     <form action="/client/job/new" method="POST"  class="white-box">
 
