fix courier delivery timeInterval bug and copy tweak for login sign up views

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,6 +1,9 @@
 <div class="container">
-    <div class="row" style="margin-top: 15%">
-      <h3 class="top-margin white-font">Login</h3>
+    <div class="row" style="margin-top: 10%">
+      <h3 class="top-margin zero-margins zero-paddings white-font">REIGNdeer</h3>
+      <p class="white-font zero-paddings">
+        Login to start sending parcels the smart way.
+      </p>
     </div>
     <form action="/auth/login" method="POST">
 
