--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -28,8 +28,8 @@
       <div class="row">
           <label for="newUserType" class="white-font" >Reason for joining</label>
           <select class="u-full-width" name="type" id="newUserType">
-            <option value="client">I want to send stuff!</option>
-            <option value="courier">I want to be a REIGNdeer!</option>
+            <option value="client">I want to have stuff delivered!</option>
+            <option value="courier">I want to be a REIGNdeer and make deliveries!</option>
           </select>
       </div>
 
